# Fresco

./: .boinc-release  .gitattributes  .gitignore  ACCOUNT_MANAGER.md  AGENTS.md  ANDROID.md  CLAUDE.md  ERROR_REPORTING.md  HOW_TO_RUN.md  LICENSE  README.md  SIGN.md  WORKING_SOLUTION.md  dev.ps1  dev.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  vitest.config.ts
.claude/: settings.json
.claude/commands/: lint.md  mocktest.md  security-review.md
.githooks/: pre-commit
.github/: ISSUE_AGENT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  rpc-contract-check.yml
agent_docs/: adr.md  architecture.md  development-history.md  index.md
agent_docs/guides/: dod.md  environment-setup.md  logging.md
agent_docs/templates/: adr.md  architecture.md  development-history.md
scripts/: build-dev.sh  check-i18n.ts  generate-icons.py
src/: App.test.ts  App.vue  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  updater.rs
src-tauri/src/rpc/: auth.rs  commands.rs  connection.rs  mod.rs  types.rs  xml_parse.rs
src/components/: AboutDialog.test.ts  AboutDialog.vue  AccountManagerWizard.vue  ActivityControls.test.ts  ActivityControls.vue  BoincInstallDialog.test.ts  BoincInstallDialog.vue  ColumnCustomizationDialog.test.ts  ColumnCustomizationDialog.vue  ConfirmDialog.test.ts  ConfirmDialog.vue  ContextMenu.test.ts  ContextMenu.vue  DataTable.test.ts  (+45 more)
(+92 files in other folders)
