[package]
name = "fresco"
version = "0.1.0"
description = "Fresco — A modern BOINC manager"
authors = ["aufarz"]
edition = "2021"

[lib]
name = "manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt"] }
quick-xml = { version = "0.37", features = ["serialize"] }
md-5 = "0.10"
hex = "0.4"
thiserror = "2"
log = "0.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-cli = "2.4.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
